<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/home_icon"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/anage_farmer_icon"
        android:enabled="true"
        android:icon="@drawable/managefarmer"
        android:title="@string/manage_farmer"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/manage_staff_icon"
        android:enabled="true"
        android:icon="@drawable/managestaff"
        android:title="@string/manage_staff"
        app:showAsAction="ifRoom" />
</menu>