<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".FarmerFragment">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/add_farmer"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/add_farmer" />

    <TextView
        android:id="@+id/new_farmer_txt"
        android:layout_width="79dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_farmer"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="173dp"
        android:layout_marginBottom="20dp"
        android:text="@string/add_new_farmer" />


    <ImageView
        android:id="@+id/view_farmer"
        android:layout_width="100dp"
        android:layout_height="82dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/eye_1" />
    <TextView
        android:id="@+id/view_farmer_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_farmer"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/view_farmer" />


    <ImageView
        android:id="@+id/edit_farmer"
        android:layout_width="wrap_content"
        android:layout_height="109dp"
        android:layout_below="@+id/add_farmer"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="50dp"

        android:src="@drawable/edit_farmer_80"
        />


    <TextView
        android:id="@+id/edit_farmer_txt"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_farmer"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"

        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"

        android:layout_marginTop="4dp"

        android:text="@string/edit_farmer" />



    <ImageView
        android:id="@+id/view_farmer_per_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_below="@+id/view_farmer"
        android:src="@drawable/user_location"
        android:layout_alignParentRight="true" />
    <TextView
        android:id="@+id/farmers_per_location_txt"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/view_farmer_per_location"
        android:layout_centerVertical="true"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:text="@string/view_farmers_per_location" />


    <ImageView
        android:id="@+id/add_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_farmer_txt"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="2dp"

        android:src="@drawable/location"
   />


    <TextView
        android:id="@+id/add_location_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_location"
android:layout_toEndOf="@+id/add_location"
        android:layout_below="@+id/edit_farmer_txt"
        android:layout_toRightOf="@+id/add_location"
        android:layout_marginTop="40dp"/>
    </RelativeLayout>




</ScrollView>