<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".StaffFragment">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/new_staff"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="70dp"

        android:src="@drawable/add_user_100" />

    <TextView
        android:id="@+id/new_staff_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_staff"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/new_staff" />


    <ImageView
        android:id="@+id/view_staff"
        android:layout_width="100dp"
        android:layout_height="82dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"

        android:src="@drawable/eye_1" />
    <TextView
        android:id="@+id/view_staff_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_staff"

        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"

        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/view_staff" />

    <ImageView
        android:id="@+id/edit_staff"
        android:layout_width="94dp"
        android:layout_height="90dp"
        android:layout_below="@+id/new_staff_txt"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:src="@drawable/edit_staff_50" />

    <TextView
        android:id="@+id/edit_staff_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_staff"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"

        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"

        android:layout_marginTop="10dp"

        android:text="@string/edit_staff" />


    <ImageView
        android:id="@+id/staff_dept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/view_staff_txt"
        android:src="@drawable/dept_icon"
        android:layout_alignParentRight="true" />


    <TextView
        android:id="@+id/staff_per_dep_txt"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/staff_dept"
        android:layout_centerVertical="true"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:text="@string/staff_per_department" />
</RelativeLayout>
</ScrollView>