<?xml version="1.0" encoding="utf-8"?>


    <ScrollView
    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".farmer_data">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <SearchView
            android:id="@+id/search_farmer_data"
            android:layout_width="385dp"
            android:layout_height="78dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="20dp"
            android:tooltipText="@string/search_name_id" />

        <TextView
            android:id="@+id/idno"
            android:layout_width="158dp"
            android:layout_height="68dp"
            android:layout_below="@+id/search_farmer_data"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="222dp"
            android:layout_marginLeft="222dp"
            android:layout_marginTop="101dp"
            android:text="@string/id_number" />

        <TextView
            android:id="@+id/name"
            android:layout_width="158dp"
            android:layout_height="68dp"
            android:layout_below="@+id/search_farmer_data"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="37dp"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="104dp"
            android:text="Name" />

        <Spinner
            android:id="@+id/farmer_duration_spinner"
            android:layout_width="183dp"
            android:layout_height="48dp"
            android:layout_below="@+id/name"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="128dp" />

        <Button
            android:id="@+id/view_farmer_data"
            android:layout_width="158dp"
            android:layout_height="58dp"
            android:layout_below="@+id/farmer_duration_spinner"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="93dp"
            android:layout_marginLeft="93dp"
            android:layout_marginTop="198dp"
            android:text="@string/view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/farmer_data_recyclerview"
            android:layout_width="351dp"
            android:layout_height="431dp"
            android:layout_below="@+id/view_farmer_data"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="32dp" />
    </RelativeLayout>

    </ScrollView>
