<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".New_farmer">

    <EditText
        android:id="@+id/new_farmer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="50dp"
        android:hint="@string/farmer_name"
        />

    <EditText
        android:id="@+id/new_farmer_IDNO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/selected_location_option"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/id_no"
        android:inputType="textPersonName"
        />
    <EditText
        android:id="@+id/new_farmer_phoneno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/new_farmer_IDNO"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="phone number"
        android:inputType="phone"
        />

    <AutoCompleteTextView
        android:id="@+id/select_location_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/new_farmer_name"
        android:completionThreshold="1"
        android:completionHint="select location"
        android:hint="select location"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:dropDownAnchor="@id/selected_location_option"


        />
    <TextView
        android:id="@+id/selected_location_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/select_location_txt"
        android:layout_below="@+id/select_location_txt"
        android:layout_toRightOf="@+id/select_location_txt" />
    <TextView
        android:id="@+id/add_location_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_location_txt"
        android:text="@string/add_location_farmer"
        android:layout_toEndOf="@+id/select_location_txt"
        android:layout_toRightOf="@+id/select_location_txt" />

<!--    <TextView-->

<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentStart="true"-->
<!--        android:layout_alignParentLeft="true"-->
<!--        android:layout_below="@+id/select_location_txt"-->
<!--        android:text="select location"-->
<!--        android:layout_marginTop="20dp"/>-->


<!--   <androidx.appcompat.widget.SearchView-->
<!--       android:id="@+id/new_farmer_location"-->
<!--       android:layout_width="wrap_content"-->
<!--       android:layout_height="wrap_content"-->
<!--       android:layout_centerHorizontal="true"-->
<!--       android:layout_below="@+id/select_location_txt"-->
<!--       android:layout_marginTop="30dp"/>-->


    <Button
        android:id="@+id/new_farmer_submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/new_farmer_phoneno"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"

        android:text="Submit" />

</RelativeLayout>